// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InventoryCardSubscriptionsContext should expect specific sort properties: sort properties 1`] = `
{
  "NEXT_EVENT_DATE": "next_event_date",
  "NEXT_EVENT_TYPE": "next_event_type",
  "PRODUCT_NAME": "product_name",
  "QUANTITY": "quantity",
  "SERVICE_LEVEL": "service_level",
  "SKU": "sku",
  "TOTAL_CAPACITY": "total_capacity",
  "USAGE": "usage",
}
`;

exports[`InventoryCardSubscriptionsContext should handle a store response with useGetSubscriptionsInventory: store response 1`] = `
{
  "data": [
    {
      "data": [
        {
          "lorem": "ipsum",
        },
        {
          "dolor": "sit",
        },
      ],
      "meta": {},
    },
  ],
  "error": false,
  "fulfilled": true,
  "message": null,
  "pending": false,
  "responses": {
    "id": {},
    "list": [
      {
        "data": [
          {
            "data": [
              {
                "lorem": "ipsum",
              },
              {
                "dolor": "sit",
              },
            ],
            "meta": {},
          },
        ],
        "fulfilled": true,
      },
    ],
  },
}
`;

exports[`InventoryCardSubscriptionsContext should handle an onColumnSort event: onColumnSort event, dispatch 1`] = `
[
  [
    [
      {
        "dir": "desc",
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_dir",
        "viewId": "lorem",
      },
      {
        "sort": "loremIpsumColumnOne",
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_sort",
        "viewId": "lorem",
      },
    ],
  ],
  [
    [
      {
        "dir": "asc",
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_dir",
        "viewId": "lorem",
      },
      {
        "sort": "loremIpsumColumnOne",
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_sort",
        "viewId": "lorem",
      },
    ],
  ],
]
`;

exports[`InventoryCardSubscriptionsContext should handle an onPage event: onPage event, dispatch 1`] = `
[
  [
    [
      {
        "offset": 1,
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_offset",
        "viewId": "lorem",
      },
      {
        "limit": 5,
        "type": "SET_QUERY_RHSM_SUBSCRIPTIONS_INVENTORY_limit",
        "viewId": "lorem",
      },
    ],
  ],
]
`;

exports[`InventoryCardSubscriptionsContext should handle variations in instances inventory API responses: inventory, cancelled 1`] = `
{
  "data": {},
  "pending": true,
}
`;

exports[`InventoryCardSubscriptionsContext should handle variations in instances inventory API responses: inventory, disabled 1`] = `
{
  "data": {},
  "fulfilled": true,
  "pending": false,
}
`;

exports[`InventoryCardSubscriptionsContext should handle variations in instances inventory API responses: inventory, error 1`] = `
{
  "data": {},
  "error": true,
  "pending": false,
}
`;

exports[`InventoryCardSubscriptionsContext should handle variations in instances inventory API responses: inventory, fulfilled 1`] = `
{
  "data": {},
  "fulfilled": true,
  "pending": false,
}
`;

exports[`InventoryCardSubscriptionsContext should handle variations in instances inventory API responses: inventory, pending 1`] = `
{
  "data": {},
  "pending": true,
}
`;

exports[`InventoryCardSubscriptionsContext should return specific properties: specific properties 1`] = `
{
  "useGetSubscriptionsInventory": [Function],
  "useOnColumnSortSubscriptions": [Function],
  "useOnPageSubscriptions": [Function],
}
`;
